# datashield-pii-lab

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  example.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  cli.py  config.py  config_loader.py  main.py
app/core/: __init__.py  models.py  pipeline.py  utils.py
app/detectors/: __init__.py  custom_rules.py  presidio_detector.py  regex_detector.py
app/ingestors/: __init__.py  csv_ingestor.py  db_ingestor.py  json_ingestor.py  pdf_ingestor.py  sql_ingestor.py  txt_ingestor.py
app/reporting/: __init__.py  html_report.py  json_report.py
app/transformers/: __init__.py  hasher.py  masker.py  pseudonymizer.py  redactor.py  sanitizer.py
samples/: sample_customers.csv  sample_customers.json
tests/: conftest.py  test_cli.py  test_db_ingestor.py  test_ingestors.py  test_output_generation.py  test_presidio_detector.py  test_regex_detector.py  test_sanitization.py
